espresso (0.99.59) UNRELEASED; urgency=low

  * Copy log files right at the end of the installation, rather than just
    after copying the filesystem.
  * Log which language packs we're keeping.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 20 Apr 2006 00:27:38 +0100

espresso (0.99.58) dapper; urgency=low

  [ Jonathan Riddell ]
  * KDE frontend:
    - Fix various QString/unicode compatibility problems.
  * Fix QString/unicode compatibility problem in partman component.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Apr 2006 16:43:15 +0100

espresso (0.99.57) dapper; urgency=low

  * Remove old (and broken anyway, see Malone #26436) code to embed Mozilla
    into the welcome page, and drop the python-gnome2-extras dependency.
  * KDE frontend:
    - Remove bogus hostname, fullname, and name instance variables; fix
      default hostname setting in info_loop() (closes: Malone #40143).
    - Remove old set_locales function, which is no longer needed and
      apparently causes a crash in pykde.
    - Comment out translate_widgets call in constructor, which Jonathan says
      sometimes causes a crash when creating kdialogs.
  * GTK frontend:
    - Add "Settings" category to .desktop file in order to move the menu
      entry to System -> Applications.
  * Fix going forward from autopartition question with the resize option
    selected; back up properly from partman-partitioning/new_size question
    on error (part of Malone #39062).
  * Fix some spurious newlines in Indonesian and Polish translations.
  * Automatic update of included source packages: partman-auto 45ubuntu9.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 19 Apr 2006 15:43:59 +0100

espresso (0.99.56) dapper; urgency=low

  * Set OVERRIDE_UNSUPPORTED_OS=1 while running grub-installer to force it
    to use its default MBR selection method (closes: Malone #40131).
  * Automatic update of included source packages: grub-installer
    1.14ubuntu4.
